# merch-shop/api-docs.json
@@ -1,268 +1,23 @@
-{
-    "openapi": "3.0.2",
-    "info": {
-        "title": "Laravel",
-        "version": "0.0.1"
-    },
-    "servers": [
-        {
-            "url": "http:\/\/merch-shop.test"
-        }
-    ],
-    "paths": {
-        "\/api\/news": {
-            "get": {
-                "tags": [
-                    "news"
-                ],
-                "summary": "Display a listing of the resource.",
-                "responses": {
-                    "200": {
-                        "description": "Successful response",
-                        "content": {
-                            "application\/json": {
-                                "schema": {
-                                    "type": "object",
-                                    "properties": {
-                                        "data": {
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#\/components\/schemas\/News"
-                                            }
-                                        },
-                                        "links": {
-                                            "$ref": "#\/components\/schemas\/PaginatorLinks"
-                                        },
-                                        "meta": {
-                                            "$ref": "#\/components\/schemas\/PaginatorMeta"
-                                        }
-                                    }
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "\/api\/news\/{news}": {
-            "get": {
-                "tags": [
-                    "news"
-                ],
-                "summary": "Display the specified resource.",
-                "parameters": [
-                    {
-                        "name": "news",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Successful response",
-                        "content": {
-                            "application\/json": {
-                                "schema": {
-                                    "type": "object",
-                                    "properties": {
-                                        "data": {
-                                            "$ref": "#\/components\/schemas\/News"
-                                        }
-                                    }
-                                }
-                            }
-                        }
-                    },
-                    "404": {
-                        "description": "Not found"
-                    }
-                }
-            }
-        },
-        "\/api\/pages": {
-            "get": {
-                "tags": [
-                    "page"
-                ],
-                "summary": "Display a listing of the resource.",
-                "responses": {
-                    "200": {
-                        "description": "Successful response",
-                        "content": {
-                            "application\/json": {
-                                "schema": {
-                                    "type": "object",
-                                    "properties": {
-                                        "data": {
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#\/components\/schemas\/Page"
-                                            }
-                                        },
-                                        "links": {
-                                            "$ref": "#\/components\/schemas\/PaginatorLinks"
-                                        },
-                                        "meta": {
-                                            "$ref": "#\/components\/schemas\/PaginatorMeta"
-                                        }
-                                    }
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "\/api\/pages\/{page}": {
-            "get": {
-                "tags": [
-                    "page"
-                ],
-                "summary": "Display the specified resource.",
-                "parameters": [
-                    {
-                        "name": "page",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Successful response",
-                        "content": {
-                            "application\/json": {
-                                "schema": {
-                                    "type": "object",
-                                    "properties": {
-                                        "data": {
-                                            "$ref": "#\/components\/schemas\/Page"
-                                        }
-                                    }
-                                }
-                            }
-                        }
-                    },
-                    "404": {
-                        "description": "Not found"
-                    }
-                }
-            }
-        }
-    },
-    "components": {
-        "schemas": {
-            "News": {
-                "type": "object",
-                "properties": {
-                    "title": {
-                        "type": "string"
-                    },
-                    "slug": {
-                        "type": "string"
-                    },
-                    "text": {
-                        "type": "string"
-                    },
-                    "published_at": {
-                        "format": "date-time",
-                        "type": "string"
-                    }
-                }
-            },
-            "Page": {
-                "type": "object",
-                "properties": {
-                    "title": {
-                        "type": "string"
-                    },
-                    "text": {
-                        "type": "string"
-                    },
-                    "slug": {
-                        "type": "string"
-                    }
-                }
-            },
-            "PaginatorLinks": {
-                "type": "object",
-                "properties": {
-                    "first": {
-                        "type": "string"
-                    },
-                    "last": {
-                        "type": "string"
-                    },
-                    "prev": {
-                        "type": "string",
-                        "nullable": true
-                    },
-                    "next": {
-                        "type": "string",
-                        "nullable": true
-                    }
-                }
-            },
-            "PaginatorMeta": {
-                "type": "object",
-                "properties": {
-                    "current_page": {
-                        "type": "integer"
-                    },
-                    "from": {
-                        "type": "integer"
-                    },
-                    "last_page": {
-                        "type": "integer"
-                    },
-                    "path": {
-                        "type": "string"
-                    },
-                    "per_page": {
-                        "type": "integer"
-                    },
-                    "to": {
-                        "type": "integer"
-                    },
-                    "total": {
-                        "type": "integer"
-                    },
-                    "links": {
-                        "type": "array",
-                        "items": {
-                            "type": "object",
-                            "properties": {
-                                "url": {
-                                    "type": "string",
-                                    "nullable": true
-                                },
-                                "label": {
-                                    "type": "string",
-                                    "nullable": true
-                                },
-                                "active": {
-                                    "type": "boolean"
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        }
-    },
-    "tags": [
-        {
-            "name": "news",
-            "description": "News"
-        },
-        {
-            "name": "page",
-            "description": "Page"
-        }
-    ]
-}
+
+  [41;1m Error [49;22m
+
+[39;1m  Call to a member function getDescription() on null[39;22m
+
+  at [32mvendor/vyuldashev/laravel-openapi/src/Builders/Paths/OperationsBuilder.php[39m:[32m71[39m
+    [90m 67[0m[90m▕ [0m
+    [90m 68[0m[90m▕ [0m[35;1m            [0m[39;1m$operation [0m[35;1m= [0m[39;1mOperation[0m[35;1m::[0m[39;1mcreate[0m[35;1m()[0m
+    [90m 69[0m[90m▕ [0m[35;1m                ->[0m[39;1maction[0m[35;1m([0m[39;1mStr[0m[35;1m::[0m[39;1mlower[0m[35;1m([0m[39;1m$operationAttribute[0m[35;1m->[0m[39;1mmethod[0m[35;1m) ?: [0m[39;1m$route[0m[35;1m->[0m[39;1mmethod[0m[35;1m)[0m
+    [90m 70[0m[90m▕ [0m[35;1m                ->[0m[39;1mtags[0m[35;1m(...[0m[39;1m$tags[0m[35;1m)[0m
+[31;1m  ➜ [0m[3;1m 71[0m[90m▕ [0m[35;1m                ->[0m[39;1mdescription[0m[35;1m([0m[39;1m$route[0m[35;1m->[0m[39;1mactionDocBlock[0m[35;1m->[0m[39;1mgetDescription[0m[35;1m()->[0m[39;1mrender[0m[35;1m() !== [0m[37m'' [0m[35;1m? [0m[39;1m$route[0m[35;1m->[0m[39;1mactionDocBlock[0m[35;1m->[0m[39;1mgetDescription[0m[35;1m()->[0m[39;1mrender[0m[35;1m() : [0m[39;1mnull[0m[35;1m)[0m
+    [90m 72[0m[90m▕ [0m[35;1m                ->[0m[39;1msummary[0m[35;1m([0m[39;1m$route[0m[35;1m->[0m[39;1mactionDocBlock[0m[35;1m->[0m[39;1mgetSummary[0m[35;1m() !== [0m[37m'' [0m[35;1m? [0m[39;1m$route[0m[35;1m->[0m[39;1mactionDocBlock[0m[35;1m->[0m[39;1mgetSummary[0m[35;1m() : [0m[39;1mnull[0m[35;1m)[0m
+    [90m 73[0m[90m▕ [0m[35;1m                ->[0m[39;1moperationId[0m[35;1m([0m[39;1m$operationId[0m[35;1m)[0m
+    [90m 74[0m[90m▕ [0m[35;1m                ->[0m[39;1mparameters[0m[35;1m(...[0m[39;1m$parameters[0m[35;1m)[0m
+    [90m 75[0m[90m▕ [0m[35;1m                ->[0m[39;1mrequestBody[0m[35;1m([0m[39;1m$requestBody[0m[35;1m)[0m
+
+      [2m+1 vendor frames [22m
+  [33m2   [39m[39;1m[internal][39;22m:[39;1m0[39;22m
+  [37m    Vyuldashev\LaravelOpenApi\Builders\PathsBuilder::Vyuldashev\LaravelOpenApi\Builders\{closure}()[39m
+
+      [2m+17 vendor frames [22m
+  [33m20  [39m[39;1martisan[39;22m:[39;1m37[39;22m
+  [37m    Illuminate\Foundation\Console\Kernel::handle()[39m
